<resources>
    <string name="app_name">WiFi密码查看器</string>
    <string name="noroot">抱歉，未取得root授权，本软件功能无法正常使用</string>
    <string name="nowifi">抱歉，未找到WiFi密码信息</string>
    <string name="search">搜索</string>
    <string name="search_hint">搜索WiFi</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="copyall">复制WiFi名称与密码</string>
    <string name="copypassword">复制WiFi密码</string>
    <string name="copyname">复制WiFi名称</string>
    <!--<string name="noname">Sorry, Cannot get WiFi name =_=</string>-->
    <string name="nopassword">无密码</string>
    <string name="settingshow">显示无密码的WiFi</string>
    <string name="settingshownoname">显示名称乱码的WiFi</string>
    <string name="settingsortup">按WiFi名升序排列</string>
    <string name="settingsortdown">按WiFi名降序排列</string>
    <string name="settingtitle">显示设置</string>
    <string name="settingtitle1">列表排序</string>
    <string name="settingtitle2">搜索设置</string>
    <string name="settingtitle3">备份还原</string>
    <string name="backupmessage">WiFi密码将备份至目录下</string>
    <string name="restoremessage">此过程不可逆转，确定继续还原？</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="backupdir">backup</string>
    <string name="backupdone">备份已完成</string>
    <string name="backupfail">备份失败</string>
    <string name="restoredone">还原已完成</string>
    <string name="nobackupfile">未找到备份文件</string>
    <string name="restorefail">还原失败</string>
    <string name="nosdcard">SD卡不存在或者不可读写</string>
    <string name="clearhistory">清空搜索记录</string>
    <string name="doneclearhistory">搜索记录已清空</string>
    <string name="introduction">软件说明</string>
    <string name="opensource">开源项目</string>
    <string name="feedback">邮件反馈</string>
    <string name="rate">给应用评价</string>
    <string name="share">分享给朋友</string>
    <string name="donate">打赏开发者</string>
    <string name="reference1">seepwd</string>
    <string name="reference1url">https://github.com/cfm1120/seepwd</string>
    <string name="reference2">SeeWifiPwd</string>
    <string name="reference2url">https://github.com/wang4yu6peng13/SeeWifiPwd</string>
    <string name="reference3">android-utils</string>
    <string name="reference3url">https://github.com/Wing-Li/android-utils</string>
    <string name="myproject">WiFiPassword</string>
    <string name="myprojecturl">https://github.com/juicecwc/WiFiPassword</string>
    <string name="mailaddress">juicecwc@gmail.com</string>
    <string name="downloadsite">http://pan.baidu.com/s/1nuIbSzZ</string>
    <string name="reference">参考项目</string>
    <string name="mine">本项目</string>
    <string name="name">名称：</string>
    <string name="psd">密码：</string>
    <string name="wificlosed">WiFi连接未打开</string>
    <string name="openwifi">开启WiFi</string>
    <string name="header">当前正在连接的WiFi：</string>

    <string name="introduction_content">
        \t\t此类应用的原理很简单，基本上都是读取系统目录 \"/data/misc/wifi/*.conf\" 中保存的WiFi密码，因此root权限是必须获取的。本应用除了获取root权限以及sd卡读写权限之外没有获取任何其他权限，无广告、不盈利，如果您不放心，只好建议您卸载。\n\t\t本应用参照了 cfm1120 的开源项目 seepwd ，wang4yu6peng13的开源项目 SeeWifiPwd ，Wing-Li 的开源方法检查 root 权限，同时本项目也开源，项目地址见菜单“开源项目”。\n\t\t经过一番折腾，作者终于解决了中文WiFi名称乱码的问题，不过只在华为荣耀六中测试可用，还望机友们多多反馈~\n\n
        Tips：\n
        ◎手动删除的 Wifi 无法获取。\n
        ◎单击列表里的 Wifi 名称和密码可以复制。\n
        ◎有密码的WiFi排在前面。\n
        ◎可以设置显示无密码WiFi或者不显示。\n
        ◎可以设置WiFi列表的排序方式。\n
        ◎默认开启自动备份，备份文件在\"/Android/data/com.example.juicecwc.wifipassword/files/Backup"下。\n\n
        Juicecwc \n        2016.9.1\n\n</string>

</resources>
